Upgrade all notebooks to the latest TOAST API

--- a/lessons/02_Simulated_Scan_Strategies/simscan_satellite.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_satellite.ipynb
@@ -343,7 +343,6 @@
    "outputs": [],
    "source": [
     "from toast.todmap import (\n",
-    "    get_submaps_nested,\n",
     "    OpPointingHpix,\n",
     "    OpAccumDiag\n",
     ")\n",
@@ -370,28 +369,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the locally hit pixels\n",
-    "\n",
-    "localpix, localsm, subnpix = get_submaps_nested(data, nside)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Construct a distributed map to store the hit map\n",
     "\n",
     "npix = 12 * nside**2\n",
     "\n",
     "hits = DistPixels(\n",
-    "    comm=data.comm.comm_world,\n",
-    "    size=npix,\n",
+    "    data,\n",
     "    nnz=1,\n",
     "    dtype=np.int64,\n",
-    "    submap=subnpix,\n",
-    "    local=localsm,\n",
     ")\n",
     "hits.data.fill(0)"
    ]
@@ -459,9 +444,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -473,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
