--- a/lessons/03_Simulated_Sky_Signal/simsky_timedomain.ipynb
+++ b/lessons/03_Simulated_Sky_Signal/simsky_timedomain.ipynb
@@ -185,7 +185,6 @@
    "outputs": [],
    "source": [
     "from toast.todmap import (\n",
-    "    get_submaps_nested,\n",
     "    OpPointingHpix,\n",
     "    OpAccumDiag\n",
     ")\n",
@@ -198,21 +197,14 @@
     "pointing = OpPointingHpix(nside=nside, nest=True, mode=\"IQU\")\n",
     "pointing.exec(data)\n",
     "\n",
-    "# Compute the locally hit pixels\n",
-    "\n",
-    "localpix, localsm, subnpix = get_submaps_nested(data, nside)\n",
-    "\n",
     "# Construct a distributed map to store the hit map\n",
     "\n",
     "npix = 12 * nside**2\n",
     "\n",
     "hits = DistPixels(\n",
-    "    comm=data.comm.comm_world,\n",
-    "    size=npix,\n",
+    "    data,\n",
     "    nnz=1,\n",
     "    dtype=np.int64,\n",
-    "    submap=subnpix,\n",
-    "    local=localsm,\n",
     ")\n",
     "hits.data.fill(0)\n",
     "\n",
@@ -304,14 +296,12 @@
    "outputs": [],
    "source": [
     "opsim_pysm = OpSimPySM(\n",
+    "    data,\n",
     "    comm=None,\n",
     "    pysm_model=pysm_sky_config,\n",
-    "    nside=nside,\n",
     "    apply_beam=True,\n",
     "    debug=True,\n",
     "    focalplanes=[focal_plane],\n",
-    "    subnpix=subnpix,\n",
-    "    localsm=localsm\n",
     ")"
    ]
   },
@@ -510,9 +500,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -524,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
