--- a/lessons/06_Map_Making/mapmaking.ipynb
+++ b/lessons/06_Map_Making/mapmaking.ipynb
@@ -180,6 +180,7 @@
    "source": [
     "import toast\n",
     "import toast.todmap\n",
+    "import toast.pipeline_tools\n",
     "from toast.mpi import MPI\n",
     "\n",
     "import numpy as np\n",
@@ -328,14 +329,10 @@
    "source": [
     "# Scan the signal from a map\n",
     "\n",
-    "localpix, localsm, subnpix = toast.todmap.get_submaps_nested(data, args.nside, subnside=1)\n",
     "distmap = toast.map.DistPixels(\n",
-    "    comm=mpiworld,\n",
-    "    size=12 * args.nside **2,\n",
+    "    data,\n",
     "    nnz=3,\n",
     "    dtype=np.float32,\n",
-    "    submap=subnpix,\n",
-    "    local=localsm,\n",
     ")\n",
     "distmap.read_healpix_fits(\"sim_map.fits\")\n",
     "toast.todmap.OpSimScan(distmap=distmap, out=name).exec(data)\n",
@@ -540,9 +537,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -554,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
