--- a/lessons/07_Pipelines/pipelines.ipynb
+++ b/lessons/07_Pipelines/pipelines.ipynb
@@ -269,11 +269,9 @@
     "\n",
     "    expand_pointing(args, comm, data)\n",
     "\n",
-    "    localpix, localsm, subnpix = get_submaps(args, comm, data)\n",
-    "\n",
     "    signalname = None\n",
     "    skyname = simulate_sky_signal(\n",
-    "        args, comm, data, [focalplane], subnpix, localsm, \"signal\"\n",
+    "        args, comm, data, [focalplane], \"signal\"\n",
     "    )\n",
     "    if skyname is not None:\n",
     "        signalname = skyname\n",
@@ -380,17 +378,13 @@
     "            tod = ob[\"tod\"]\n",
     "            tod.free_radec_quats()\n",
     "\n",
-    "    # Prepare auxiliary information for distributed map objects                                                                                          \n",
-    "\n",
-    "    _, localsm, subnpix = get_submaps(args, comm, data)\n",
-    "\n",
     "    if args.pysm_model:\n",
     "        focalplanes = [s.telescope.focalplane.detector_data for s in schedules]\n",
     "        signalname = simulate_sky_signal(\n",
-    "            args, comm, data, focalplanes, subnpix, localsm, \"signal\"\n",
+    "            args, comm, data, focalplanes, \"signal\"\n",
     "        )\n",
     "    else:\n",
-    "        signalname = scan_sky_signal(args, comm, data, localsm, subnpix, \"signal\")\n",
+    "        signalname = scan_sky_signal(args, comm, data, \"signal\")\n",
     "\n",
     "    # Set up objects to take copies of the TOD at appropriate times                                                                                          \n",
     "\n",
@@ -771,9 +765,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -785,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
