--- a/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
@@ -591,13 +591,20 @@
     "healpy.mollview(hits, unit=\"hits\", title=\"Total hits, Pole\")\n",
     "healpy.graticule(22.5, verbose=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -609,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
