--- a/lessons/02_Simulated_Scan_Strategies/simscan_satellite_mpi.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_satellite_mpi.ipynb
@@ -54,7 +54,6 @@
     "from toast.todmap import (\n",
     "    slew_precession_axis,\n",
     "    TODSatellite,\n",
-    "    get_submaps_nested,\n",
     "    OpPointingHpix,\n",
     "    OpAccumDiag\n",
     ")\n",
@@ -143,21 +142,14 @@
     "pointing = OpPointingHpix(nside=nside, nest=True, mode=\"IQU\")\n",
     "pointing.exec(data)\n",
     "\n",
-    "# Compute the locally hit pixels\n",
-    "\n",
-    "localpix, localsm, subnpix = get_submaps_nested(data, nside)\n",
-    "\n",
     "# Construct a distributed map to store the hit map\n",
     "\n",
     "npix = 12 * nside**2\n",
     "\n",
     "hits = DistPixels(\n",
-    "    comm=data.comm.comm_world,\n",
-    "    size=npix,\n",
+    "    data,\n",
     "    nnz=1,\n",
     "    dtype=np.int64,\n",
-    "    submap=subnpix,\n",
-    "    local=localsm,\n",
     ")\n",
     "hits.data.fill(0)\n",
     "\n",
@@ -218,9 +210,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
