--- a/lessons/04_Simulated_Instrument_Signal/siminst.ipynb
+++ b/lessons/04_Simulated_Instrument_Signal/siminst.ipynb
@@ -731,9 +731,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CMB 20191012",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cmbenv-20191012"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -745,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
