--- a/lessons/03_Simulated_Sky_Signal/simsky_mapdomain.ipynb
+++ b/lessons/03_Simulated_Sky_Signal/simsky_mapdomain.ipynb
@@ -290,6 +290,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "Create a `PySMSky` object with pure CMB (model `c1`), in `uK_CMB`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the CMB signal for 2 channels at 2 different frequencies and verify that the maps are the same to double precision error (~1e-14).\n",
+    "To specify a channel at a single frequency instead of a bandpass, you can specify:\n",
+    "\n",
+    "    bandpasses={\"ch0\":(100,1)}\n",
+    "    \n",
+    "Where the first element of the tuple is frequency in `GHz`, the second its weight."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
