--- a/lessons/03_Simulated_Sky_Signal/simsky_mapdomain.ipynb
+++ b/lessons/03_Simulated_Sky_Signal/simsky_mapdomain.ipynb
@@ -320,9 +320,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CMB 20191114",
    "language": "python",
-   "name": "python3"
+   "name": "cmbenv-20191114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -334,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
