Work on updating intro lesson.  Fix missing image for satellite scan strategy.

--- a/lessons/01_Introduction/intro_mpi.ipynb
+++ b/lessons/01_Introduction/intro_mpi.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Introduction - MPI Example\n",
     "\n",
-    "This lesson is a brief introduction to TOAST and its data representations.  This next cell is just initializing some things for the notebook."
+    "This lesson is a brief introduction to TOAST and its data representations.  We will skip the material covered in the serial Introduction notebook and focus here on what things are different when using MPI.\n",
+    "\n",
+    "This notebook is designed to run from an MPI-enabled TOAST installation, either on a NERSC compute node or locally."
    ]
   },
   {
@@ -15,17 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Are you using a special reservation for a workshop?\n",
-    "# If so, set it here:\n",
-    "nersc_reservation = \"toast2\"\n",
-    "\n",
     "# Load common tools for all lessons\n",
     "import sys\n",
     "sys.path.insert(0, \"..\")\n",
     "from lesson_tools import (\n",
-    "    check_nersc\n",
+    "    fake_focalplane\n",
     ")\n",
-    "nersc_host, nersc_repo, nersc_resv = check_nersc(reservation=nersc_reservation)\n",
     "\n",
     "# Capture C++ output in the jupyter cells\n",
     "%reload_ext wurlitzer"
@@ -160,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
