--- a/lessons/02_Simulated_Scan_Strategies/simscan_satellite.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_satellite.ipynb
@@ -28,7 +28,7 @@
     "## Overview\n",
     "\n",
     "A generic satellite scanning strategy can be described in terms of precession and spin axes, the opening angles about each of them, and the rates of rotation.  The precession axis itself is typically oriented in the anti-sun direction and that orientation must be updated either in steps or with a continuous slewing motion.  Here is a cartoon (drawn from an old, public LiteBIRD talk) showing a sketch of these angles:\n",
-    "<img src=\"litebird_scan_example.png\" width=\"736px\">\n",
+    "![Cartoon of LiteBIRD scanning](litebird_scan_example.png)\n",
     "\n",
     "For a real satellite experiment such as Planck or LiteBIRD, there are many custom details, such as simulating repointing maneuvers, simulating any lost time due to cooler cycling, nutation effects, etc.  Those are contained in classes for the specific experiments.  The tools built in to the core TOAST package are intended for rough simulations to study things like scan strategy choices.\n",
     "\n",
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
