More work on intro

--- a/lessons/01_Introduction/intro.ipynb
+++ b/lessons/01_Introduction/intro.ipynb
@@ -269,9 +269,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One common use pattern is to \"read and cache\" data.  This happens if we want to keep the data in memory to re-use later.  The TOD class has a set of methods that start with the string \"local_\" that perform this action."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data from cache or read and cache\n",
+    "\n",
+    "print(\"TOD timestamps = {} ...\".format(tod.local_times()[:2]))\n",
+    "for d in detnames:\n",
+    "    print(\"TOD detector {} = {} ...\".format(\n",
+    "        d, tod.local_signal(d)[:2])\n",
+    "    )\n",
+    "    print(\"TOD detector {} pointing = {} ...\".format(\n",
+    "        d, tod.local_pointing(d)[:2,:])\n",
+    "    )\n",
+    "    print(\"TOD detector {} flags = {} ...\".format(\n",
+    "        d, tod.local_flags(d)[:2])\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise:  Plot Some Data\n",
     "\n",
-    "Get the data for detector "
+    "Get the data for detector 3B in the previously created `tod` variable and plot it versus the timestamps from the TOD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the next cell twice for a solution..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load .intro_exercise_1"
    ]
   },
   {
