--- a/lessons/01_Introduction/intro.ipynb
+++ b/lessons/01_Introduction/intro.ipynb
@@ -494,16 +494,32 @@
     "        distintervals=\"chunks\",\n",
     "        group_dets=\"detectors\",\n",
     "    )\n",
-    "    data.info()"
+    "data.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "### Exercise:  Data from Multiple Observations\n",
     "\n",
-    "Make a plot of th"
+    "Make a plot of the detector 1A signal from every observation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load .intro_exercise_2"
    ]
   },
   {
@@ -937,7 +953,7 @@
    "outputs": [],
    "source": [
     "# Now run **ALL** the (serial) tests\n",
-    "#toast.tests.run()"
+    "toast.tests.run()"
    ]
   },
   {
@@ -950,9 +966,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CMB 20191114",
    "language": "python",
-   "name": "python3"
+   "name": "cmbenv-20191114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -964,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
