Add exercises to the ground scheduling notebook

--- a/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
@@ -43,6 +43,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## First schedule\n",
+    "\n",
     "TOAST `pipelines` include a tool called `toast_ground_schedule.py`, also known as the *opportunistic scheduler*.  It builds observing schedules heuristically by building a list of available targets and scheduling and always choosing the highest priority target. `toast_ground_schedule.py` can be used to create site-specific observing schedules subject to a number of constraints. At the minimum, the tool needs the location of the observatory, observing window and at least one target. Here is a minimal example:"
    ]
   },
@@ -90,6 +92,14 @@
     "The start and stop times are given in UTC.\n",
     "\n",
     "The resulting schedule is a plain ASCII file. The header defines the telescope and each line after that defines a constant elevation scan (CES) with a fixed azimuth range. When a full pass of the target takes longer than allowed observation time, `--ces-max-time`, the CES is broken up into sub passes that use the same observing elevation but adjust the azimuth range.  The above schedule includes 10 passes of the target \"small_patch\" that fit in the given 12-hour observing window. Some passes are split into as many as 4 sub passes, each no longer than 20 minutes (default).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second patch\n",
     "\n",
     "Let's add another patch, this time using the circular patch definition format, set the observing elevation limits and enable Sun avoidance. We'll also increase `ces-max-time` so we get fewer entries in the schedule.  The circular patch format is\n",
     "\n",
@@ -145,6 +155,14 @@
    "metadata": {},
    "source": [
     "We deliberately chose the locations of the patches so that they compete over the observing time.  This allows us to point out some advanced features of the scheduler.  If you examine the very end of the observing schedule, you can note that both `small_patch` and `large_patch` were observed 7 times.  Given that `large_patch` is twice as wide and only takes twice as long to observe, equal number of observations actually implies that `large_patch` will end up with *half* as many hits per sky pixel.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Patch priority\n",
     "\n",
     "The scheduler offers two ways to remedy this issue. First, one can simply increase the priority of the large patch to dedicate more observing time to it.  **All things being equal, the number of visits to a given patch is inversely proportional to the `priority` in the patch definition**:"
    ]
@@ -179,7 +197,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the large patch is observed 9 times and the small patch is observed 4 times.  Typically though, we don't use the priority field to normalize the depths.  Instead, the user can balance the integration depths with two command line arguments: `--equalize-area` and `--equalize time`.\n",
+    "Now the large patch is observed 9 times and the small patch is observed 4 times.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Equalize area and time\n",
+    "\n",
+    "Typically we do not use the priority field to normalize the depths.  Instead, the user can balance the integration depths with two command line arguments: `--equalize-area` and `--equalize time`.\n",
     "\n",
     "With `--equalize-area` the scheduler will automatically modulate the user-given priorities with the area of each patch.\n",
     "\n",
@@ -593,6 +620,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Go back to the \"Second patch\" section of the notebook and add a third patch of your choosing.  Executing that cell will visualize the patch on the sky.\n",
+    "- In the same section, increase the observation length to one month, this will cause the Moon avoidance region to draw a band around the Equator.\n",
+    "- In \"Binning the schedule\", try increasing the FOV from 10 degrees to 35, representantive of modern SATs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -617,7 +660,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
