--- a/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
+++ b/lessons/02_Simulated_Scan_Strategies/simscan_ground.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Are you using a special reservation for a workshop?\n",
     "# If so, set it here:\n",
-    "nersc_reservation = \"toast3\"\n",
+    "nersc_reservation = None #\"toast3\"\n",
     "\n",
     "# Load common tools for all lessons\n",
     "import sys\n",
@@ -645,9 +645,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CMB 20191114",
    "language": "python",
-   "name": "python3"
+   "name": "cmbenv-20191114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -659,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   },
   "toc-autonumbering": true
  },
