--- a/lessons/04_Simulated_Instrument_Signal/conviqt.ipynb
+++ b/lessons/04_Simulated_Instrument_Signal/conviqt.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Are you using a special reservation for a workshop?\n",
     "# If so, set it here:\n",
-    "nersc_reservation = \"toast3\"\n",
+    "nersc_reservation = None # \"toast3\"\n",
     "\n",
     "# Load common tools for all lessons\n",
     "import sys\n",
@@ -36,6 +36,16 @@
     "\n",
     "# Capture C++ output in the jupyter cells\n",
     "%reload_ext wurlitzer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Capture C++ output in the jupyter cells\n",
+    "%reload_ext wurlitzer"
    ]
   },
   {
@@ -391,9 +401,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CMB 20191114",
    "language": "python",
-   "name": "python3"
+   "name": "cmbenv-20191114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -405,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
