--- a/lessons/01_Introduction/intro.ipynb
+++ b/lessons/01_Introduction/intro.ipynb
@@ -373,9 +373,68 @@
     "\n",
     "Recapping previous sections, we have some groups of processes, each of which has a set of observations.  Within a single process group, the detector data is distributed across the processes within the group.  That distribution is controlled by the size of the communicator passed to the TOD class, and also by the `detranks` parameter of the constructor.  This detranks number sets the dimension of the process grid in the detector direction.  For example, a value of \"1\" means that every process has all detectors for some span of time.  A value equal to the size of the communicator results in every process having some number of detectors for the entire observation.  The detranks parameter must divide evenly into the number of processes in the communicator and determines how the processes are arranged in a grid.\n",
     "\n",
-    "As a concrete example, imagine that MPI.COMM_WORLD has 24 processes.  We split this into 4 groups of 6 procesess.  There are 6 observations of varying lengths and every group has one or 2 observations.  Here is a picture of what data each process would have.  The global process number is shown as well as the rank within the group:\n",
-    "<img src=\"toast_data_dist.png\">\n",
-    "The MPI introduction notebook will go into more detail experimenting with data distribution."
+    "As a concrete example, imagine that MPI.COMM_WORLD has 4 processes.  We split this into 2 groups of 2 procesess.  There are 3 observations of varying lengths and every group has one or 2 observations. Here is the starting point of our data distribution:\n",
+    "<img src=\"data_distribution/data_dist_1.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we split the processes into 2 groups\n",
+    "<img src=\"data_distribution/data_dist_2.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we assign our observations to the two groups\n",
+    "<img src=\"data_distribution/data_dist_3.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we create the TOD class in each observation, we specify how the the data is distributed within each observation.  If the `detranks` parameter is \"1\", then the dimension of the process grid in the detector direction is one.\n",
+    "<img src=\"data_distribution/data_dist_4.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If `detranks` is set to the size of the group, then we get:\n",
+    "<img src=\"data_distribution/data_dist_5.png\">"
    ]
   },
   {
