--- a/lessons/07_Pipelines/pipelines.ipynb
+++ b/lessons/07_Pipelines/pipelines.ipynb
@@ -765,9 +765,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CMB 20191114",
    "language": "python",
-   "name": "python3"
+   "name": "cmbenv-20191114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -779,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
