--- a/lessons/07_Pipelines/pipelines.ipynb
+++ b/lessons/07_Pipelines/pipelines.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Are you using a special reservation for a workshop?\n",
     "# If so, set it here:\n",
-    "nersc_reservation = \"toast3\"\n",
+    "nersc_reservation = None\n",
     "\n",
     "# Load common tools for all lessons\n",
     "import sys\n",
