example of running toast satellite sim

--- a/lessons/07_Pipelines/pipelines.ipynb
+++ b/lessons/07_Pipelines/pipelines.ipynb
@@ -316,6 +316,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Check TOAST examples for all available pipelines at <https://github.com/hpc4cmb/toast/tree/master/examples>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%mkdir out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! toast_fake_focalplane.py --bandcenter_ghz 25 --bandwidth_ghz 6.3 --minpix 1 --out \"out/fp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile toast_satellite_sim.par\n",
+    "--dipole\n",
+    "--noise\n",
+    "--sample-rate\n",
+    "40.0\n",
+    "--spin-period-min\n",
+    "10.0\n",
+    "--spin-angle-deg\n",
+    "30.0\n",
+    "--prec-period-min\n",
+    "50.0\n",
+    "--prec-angle-deg\n",
+    "65.0\n",
+    "--hwp-rpm\n",
+    "20.0\n",
+    "--obs-time-h\n",
+    "24.0\n",
+    "--gap\n",
+    "4.0\n",
+    "--nside\n",
+    "512\n",
+    "--pysm-model\n",
+    "s1,d1,f1,a1\n",
+    "--pysm-apply-beam\n",
+    "--flush\n",
+    "--dipole-mode\n",
+    "total\n",
+    "--dipole-solar-speed-kms\n",
+    "369\n",
+    "--dipole-solar-gal-lat-deg\n",
+    "48.26\n",
+    "--dipole-solar-gal-lon-deg\n",
+    "263.99\n",
+    "--group-size\n",
+    "1\n",
+    "--focalplane\n",
+    "out/fp_1.pkl\n",
+    "--obs-num\n",
+    "8\n",
+    "--outdir\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile toast_satellite_sim.slurm\n",
+    "#!/bin/bash\n",
+    "\n",
+    "#SBATCH --partition=debug\n",
+    "#SBATCH --constraint=knl,quad,cache\n",
+    "#SBATCH --core-spec=4\n",
+    "#SBATCH --account=mp107\n",
+    "#SBATCH --nodes=1                                                                                             \n",
+    "#SBATCH --time=00:30:00\n",
+    "#SBATCH --job-name=tiny-satellite\n",
+    "#SBATCH --output=out_tiny_satellite_cori-knl_%j.log\n",
+    "\n",
+    "export MALLOC_MMAP_THRESHOLD_=131072\n",
+    "export PYTHONSTARTUP=\"\"\n",
+    "export PYTHONNOUSERSITE=1\n",
+    "\n",
+    "export OMP_NUM_THREADS=4\n",
+    "export OMP_PLACES=threads\n",
+    "export OMP_PROC_BIND=spread\n",
+    "\n",
+    "let nnode=1\n",
+    "let ntask=16\n",
+    "let ncore=4*$OMP_NUM_THREADS # specify 4 to allocate hyperthreads to MPI process\n",
+    "\n",
+    "srun -n $ntask -c $ncore --cpu_bind=cores \\\n",
+    "    toast_satellite_sim.py \\\n",
+    "    @toast_satellite_sim.par \\\n",
+    "    >& toast_satellite_sim.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! sbatch toast_satellite_sim.slurm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import healpy as hp\n",
+    "import numpy as np\n",
+    "binned = hp.read_map(\"out/mc_000/binned.fits.gz\")\n",
+    "hits = hp.read_map(\"out/hits.fits.gz\")\n",
+    "unseen = hits==0\n",
+    "hits[unseen] = hp.UNSEEN\n",
+    "binned[unseen] = hp.UNSEEN\n",
+    "\n",
+    "cmap = \"coolwarm\"\n",
+    "amp = 0.02\n",
+    "unit = \"K\"\n",
+    "plt.figure(figsize=[12, 8])\n",
+    "hp.mollview(np.log10(hits), sub=[1, 2, 1], title=\"hitcount\", unit=\"log10(hits)\")\n",
+    "hp.mollview(binned, cmap=cmap, min=-amp, max=amp, sub=[1, 2, 2], title=\"binned\", unit=unit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ground simulation pipeline\n",
     "\n",
     "[pipelines/toast_ground_sim.py](https://github.com/hpc4cmb/toast/blob/master/pipelines/toast_ground_sim.py)"
