import fake_focalplane from lesson tools

--- a/lessons/07_Pipelines/pipelines.ipynb
+++ b/lessons/07_Pipelines/pipelines.ipynb
@@ -63,59 +63,7 @@
     "from toast.mpi import MPI\n",
     "import toast.pipeline_tools\n",
     "\n",
-    "\n",
-    "# Fake focaplane is copied here from lesson_tools to avoid import error\n",
-    "\n",
-    "def fake_focalplane(\n",
-    "    samplerate=20,\n",
-    "    epsilon=0,\n",
-    "    net=1,\n",
-    "    fmin=0,\n",
-    "    alpha=1,\n",
-    "    fknee=0.05,\n",
-    "    fwhm=30,\n",
-    "    npix=7,\n",
-    "    fov=3.0\n",
-    "):\n",
-    "    \"\"\"Create a set of fake detectors.\n",
-    "\n",
-    "    This generates 7 pixels (14 dets) in a hexagon layout at the boresight\n",
-    "    and with a made up polarization orientation.\n",
-    "\n",
-    "    Args:\n",
-    "        None\n",
-    "\n",
-    "    Returns:\n",
-    "        (dict):  dictionary of detectors and their properties.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    from toast.tod import hex_pol_angles_radial, hex_pol_angles_qu, hex_layout\n",
-    "\n",
-    "    zaxis = np.array([0, 0, 1.0])\n",
-    "    \n",
-    "    pol_A = hex_pol_angles_qu(npix)\n",
-    "    pol_B = hex_pol_angles_qu(npix, offset=90.0)\n",
-    "    \n",
-    "    dets_A = hex_layout(npix, fov, \"\", \"\", pol_A)\n",
-    "    dets_B = hex_layout(npix, fov, \"\", \"\", pol_B)\n",
-    "    \n",
-    "    dets = dict()\n",
-    "    for p in range(npix):\n",
-    "        pstr = \"{:01d}\".format(p)\n",
-    "        for d, layout in zip([\"A\", \"B\"], [dets_A, dets_B]):\n",
-    "            props = dict()\n",
-    "            props[\"quat\"] = layout[pstr][\"quat\"]\n",
-    "            props[\"epsilon\"] = epsilon\n",
-    "            props[\"rate\"] = samplerate\n",
-    "            props[\"alpha\"] = alpha\n",
-    "            props[\"NET\"] = net\n",
-    "            props[\"fmin\"] = fmin\n",
-    "            props[\"fknee\"] = fknee\n",
-    "            props[\"fwhm_arcmin\"] = fwhm\n",
-    "            dname = \"{}{}\".format(pstr, d)\n",
-    "            dets[dname] = props\n",
-    "    return dets\n",
-    "\n",
+    "from lesson_tools import fake_focalplane\n",
     "\n",
     "def parse_arguments(comm):\n",
     "    \"\"\" Declare and parse command line arguments\n",
