--- a/hackathon/generic.ipynb
+++ b/hackathon/generic.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "# Are you using a special reservation for a workshop?\n",
     "# If so, set it here:\n",
-    "nersc_reservation = \"toast3\"\n",
+    "nersc_reservation = None\n",
     "\n",
     "# Load common tools for all lessons\n",
     "import sys\n",
