--- a/hackathon/generic.ipynb
+++ b/hackathon/generic.ipynb
@@ -338,14 +338,10 @@
     "# Clear any lingering sky signal from the buffers\n",
     "toast.tod.OpCacheClear(full_name).exec(data)\n",
     "\n",
-    "localpix, localsm, subnpix = toast.todmap.get_submaps_nested(data, args.nside)\n",
     "distmap = toast.map.DistPixels(\n",
-    "    comm=mpiworld,\n",
-    "    size=12 * args.nside **2,\n",
+    "    data,\n",
     "    nnz=len(args.mode),\n",
     "    dtype=np.float32,\n",
-    "    submap=subnpix,\n",
-    "    local=localsm,\n",
     ")\n",
     "distmap.read_healpix_fits(\"sim_map.fits\")\n",
     "toast.todmap.OpSimScan(distmap=distmap, out=full_name).exec(data)\n",
